Added encryption for password storing

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Bart van der Steenhoven",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "sqlite3": "^5.0.0"
