--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "sqlite": "^4.0.12",
     "sqlite3": "^5.0.0"
   }
 }
