--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-session": "^1.17.1",
     "formidable": "^1.2.2",
     "fs": "0.0.1-security",
+    "serve-favicon": "^2.5.0",
     "sqlite": "^4.0.12",
     "sqlite3": "^5.0.0"
   }
