--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "logerwip",
+  "name": "Dayrate",
   "version": "1.0.0",
-  "description": "i dont know yet",
+  "description": "Rate your days",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "author": "Bart van der Steenhoven",
   "license": "MIT",
